# cs_clone

./: .gitignore  Cargo.toml
assets/textures/Character_one/: character_one_sprite.ase  character_one_sprite_animation_jump.ase  character_one_sprite_animation_stay.ase  character_one_sprite_animation_walk.ase
assets/textures/Maps/: Map1.json  Map1.tmx  map_one.csv  map_one.json  map_one.tmx
assets/textures/Templates/: templates_map_one.tsx
game_plugin/: Cargo.toml
game_plugin/src/: actions.rs  collision.rs  consts.rs  lib.rs  loading.rs  map.rs  physics.rs  player.rs
src/: main.rs
