[package]
name = "cs_clone" 
version = "0.1.0"
publish = false
authors = ["OYZL"] # ToDo: you are the author ;)
edition = "2021"

[dependencies]
bevy = { version = "0.5.0"}
game_plugin = { path = "game_plugin" }
winit = "0.24.0"


# bevy_webgl2 = { version = "0.5.0", optional = true }

[build-dependencies]
embed-resource = "1.4"
